[tool.poetry]
name = "pormake"
version = "0.1.1"
description = "Python library for the construction of porous materials using topology and building blocks"
authors = ["Sangwon Lee <lsw91.main@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Sangwon91/PORMAKE"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "pormake" }
]

[tool.poetry.dependencies]
python = "^3.8"
pymatgen = "^2023.8.10"
ase = "^3.22.1"
jax = {extras = ["cpu"], version = "^0.4.1"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
ipywidgets = "^7.6.0"
nglview = "^3.0.3"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
