[project]
name = "pormake"
version = "0.2.2"
description = "Python library for the construction of porous materials using topology and building blocks"
license = "MIT"
readme = "README.md"
# repository = "https://github.com/Sangwon91/PORMAKE"
authors = [
    { name = "Sangwon Lee", email = "lsw91.main@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.10"
dependencies = [
    "ase>=3.23.0",
    "jax[cpu]>=0.4.13",
    "networkx>=3.1",
    "pymatgen>=2023.8.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
